fix: overflow animated cursor

--- a/src/input.css
+++ b/src/input.css
@@ -17,15 +17,6 @@
   @apply rounded-full bg-slate-700 hover:bg-purple-950  transition-all ease-in-out duration-300;
 }
 
-@keyframes rotation {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 @keyframes animated-cursor-1 {
   0% {
     transform: translate(250px, 0);
@@ -76,7 +67,6 @@
 }
 
 .cursor {
-  /* animation: rotation 10s linear infinite; */
   :nth-child(1) {
     animation: animated-cursor-1 15s ease infinite;
   }
